[package]
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "device-example"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.3"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
stm32f4xx-hal = { version = "0.8.3", features = ["rt", "stm32f401"] }

[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = true
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false

[profile.dev.build-override]
codegen-units = 16
debug = false
debug-assertions = false
incremental = true
opt-level = 0
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "off"
opt-level = 3
overflow-checks = false

[profile.release.build-override]
codegen-units = 16
debug = false
debug-assertions = false
incremental = true
opt-level = 0
overflow-checks = false
